--- a/application/index/view/public/top.html
+++ b/application/index/view/public/top.html
@@ -6,14 +6,25 @@
         <i title="展开左侧栏" class="iconfont">&#xe699;</i>
     </div>
     <ul class="layui-nav right" lay-filter="">
+
+        {if $Think.session.user_id}
         <li class="layui-nav-item">
             <a href="javascript:;">admin</a>
             <dl class="layui-nav-child"> <!-- 二级菜单 -->
                 <dd><a onclick="x_admin_show('个人信息','http://www.baidu.com')">个人信息</a></dd>
                 <dd><a onclick="x_admin_show('切换帐号','http://www.baidu.com')">切换帐号</a></dd>
-                <dd><a href="./login.html">退出</a></dd>
+                <dd><a href="../index/login.html">退出</a></dd>
             </dl>
         </li>
+        {else/}
+        <li class="layui-nav-item">
+            <a href="javascript:;">当前身份:游客</a>
+            <dl class="layui-nav-child"> <!-- 二级菜单 -->
+                <dd><a href="{:url('index/index/login')}">登陆</a></dd>
+            </dl>
+        </li>
+        {/if}
+
     </ul>
 </div>
 <!-- 顶部结束 -->
