--- a/application/index/view/blueprint/blueprint-info.html
+++ b/application/index/view/blueprint/blueprint-info.html
@@ -87,6 +87,7 @@
         <th>工费</th>
         <th>报价</th>
         <th>实际价格</th>
+        <th>是否作废</th>
         <th>操作</th>
       </tr>
       </thead>
@@ -107,6 +108,7 @@
         <td>{$blueprintInfoList.layout_qty}</td>
         <td>{$blueprintInfoList.product_mfg_cost}</td>
         <td>{$blueprintInfoList.product_quotation}</td>
+        <td>否</td>
         <td class="td-manage">
           <a title="详" onclick="x_admin_show('图纸明细 <span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的所有信息','{:url(\'index/blueprint/blueprintInfos\',[\'id\'=>$blueprintInfoList.drawing_detail_id])}',450)" href="javascript:;"><i class="layui-icon">详</i></a>
           <a title="外" onclick="x_admin_show('外','http://php.me/[爱，就注定了一生的漂泊].刘墉.扫描版.pdf')" href="javascript:;"><i class="layui-icon">外</i></a>
