完善用户管理

--- a/application/index/view/public/left.html
+++ b/application/index/view/public/left.html
@@ -15,7 +15,7 @@
                         </a>
                     </li >
                     <li>
-                        <a _href="{:url('index/personnel/workerList')}">
+                        <a _href="{:url('index/Employee/employeeInfo')}">
                         <i class="iconfont">&#xe6a7;</i>
                             <cite>员工列表</cite>
                         </a>
@@ -24,6 +24,12 @@
                         <a _href="{:url('index/personnel/clientList')}">
                         <i class="iconfont">&#xe6a7;</i>
                             <cite>客户列表</cite>
+                        </a>
+                    </li >
+                    <li>
+                        <a _href="{:url('index/personnel/authorityClass')}">
+                            <i class="iconfont">&#xe6a7;</i>
+                            <cite>角色管理</cite>
                         </a>
                     </li >
                     <li>
@@ -93,7 +99,7 @@
                     <li>
                         <a _href="{:url('index/ProcessType/index')}">
                             <i class="iconfont">&#xe6a7;</i>
-                            <cite>工序类型管理</cite>
+                            <cite>工序类型</cite>
                         </a>
                     </li >
                     <li>
@@ -106,6 +112,18 @@
                         <a _href="{:url('index/material/material')}">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>材料管理</cite>
+                        </a>
+                    </li >
+                    <li>
+                        <a _href="{:url('index/Department/departmentInfo')}">
+                            <i class="iconfont">&#xe6a7;</i>
+                            <cite>部门名称</cite>
+                        </a>
+                    </li >
+                    <li>
+                        <a _href="{:url('index/Duties/DutiesInfo')}">
+                            <i class="iconfont">&#xe6a7;</i>
+                            <cite>职务名称</cite>
                         </a>
                     </li >
                 </ul>
