--- a/application/index/view/index/welcome.html
+++ b/application/index/view/index/welcome.html
@@ -1,8 +1,11 @@
 ﻿{include file="public/header" /}
     <body>
     <div class="x-body layui-anim layui-anim-up">
+        {if $Think.session.user.user_id}
         <blockquote class="layui-elem-quote">欢迎管理员：
-            <span class="x-red">Admin</span>！当前时间:2018-04-25 20:50:53</blockquote>
+            <span class="x-red">{$Think.session.user.admin_name}</span>！当前时间:2018-04-25 20:50:53
+        </blockquote>
+        {/if}
         <fieldset class="layui-elem-field">
             <legend>数据统计</legend>
             <div class="layui-field-box">
