--- a/application/index/view/public/left.html
+++ b/application/index/view/public/left.html
@@ -1,6 +1,7 @@
 <div class="left-nav">
     <div id="side-nav">
         <ul id="nav">
+            {if $Think.session.user.user_id}
             <li>
                 <a href="javascript:;">
                     <i class="iconfont">&#xe726;</i>
@@ -9,9 +10,9 @@
                 </a>
                 <ul class="sub-menu">
                     <li>
-                        <a _href="{:url('index/personnel/adminList')}">
+                        <a _href="{:url('index/Administrators/adminInfo')}">
                             <i class="iconfont">&#xe6a7;</i>
-                            <cite>管理员列表</cite>
+                            <cite>超级管理员列表</cite>
                         </a>
                     </li >
                     <li>
@@ -67,7 +68,6 @@
                     </li >
                 </ul>
             </li>
-
             <li>
                 <a href="javascript:;">
                     <i class="iconfont">&#xe6f6;</i>
@@ -206,13 +206,6 @@
                     </li >
                 </ul>
             </li>
-            <!--<li>-->
-                <!--<a _href="{:url('index/mould/mould')}">-->
-                    <!--<i class="icon iconfont">&#xe6ae;</i>-->
-                    <!--<cite>模具管理</cite>-->
-                    <!--<i class="iconfont nav_right">&#xe697;</i>-->
-                <!--</a>-->
-            <!--</li>-->
             <li>
                 <a _href="datum.html">
                     <i class="icon iconfont">&#xe705;</i>
@@ -220,7 +213,6 @@
                     <i class="iconfont nav_right">&#xe697;</i>
                 </a>
             </li>
-
             <li>
                 <a _href="{:url('index/order/order')}">
                     <i class="icon iconfont">&#xe702;</i>
@@ -228,6 +220,7 @@
                     <i class="iconfont nav_right">&#xe697;</i>
                 </a>
             </li>
+            {/if}
             <li>
                 <a _href="{:url('index/agreement/agreement')}">
                     <i class="icon iconfont">&#xe740;</i>
@@ -235,6 +228,7 @@
                     <i class="iconfont nav_right">&#xe697;</i>
                 </a>
             </li>
+
             <li>
                 <a _href="datum.html">
                     <i class="icon iconfont">&#xe705;</i>
