--- a/application/index/view/public/top.html
+++ b/application/index/view/public/top.html
@@ -7,13 +7,13 @@
     </div>
     <ul class="layui-nav right" lay-filter="">
 
-        {if $Think.session.user_id}
+        {if $Think.session.user.user_id}
         <li class="layui-nav-item">
-            <a href="javascript:;">admin</a>
+            <a href="javascript:;">{$Think.session.user.admin_name}</a>
             <dl class="layui-nav-child"> <!-- 二级菜单 -->
                 <dd><a onclick="x_admin_show('个人信息','http://www.baidu.com')">个人信息</a></dd>
-                <dd><a onclick="x_admin_show('切换帐号','http://www.baidu.com')">切换帐号</a></dd>
-                <dd><a href="../index/login.html">退出</a></dd>
+                <dd><a href="{:url('index/login/switchLogin')}">切换帐号</a></dd>
+                <dd><a href="{:url('index/login/outLogin')}">退出</a></dd>
             </dl>
         </li>
         {else/}
