--- a/application/index/view/public/top.html
+++ b/application/index/view/public/top.html
@@ -9,10 +9,14 @@
 
         {if $Think.session.user.user_id}
         <li class="layui-nav-item">
-            <a href="javascript:;">{$Think.session.user.admin_name}</a>
+            <a href="javascript:;">{$Think.session.user.user_name}</a>
             <dl class="layui-nav-child"> <!-- 二级菜单 -->
                 <dd><a onclick="x_admin_show('个人信息','http://www.baidu.com')">个人信息</a></dd>
+                {if $Think.session.user.admin === 'admin'}
                 <dd><a href="{:url('index/login/switchLogin')}">切换帐号</a></dd>
+                {else/}
+                <dd><a href="{:url('index/login/switchLoginU')}">切换帐号</a></dd>
+                {/if}
                 <dd><a href="{:url('index/login/outLogin')}">退出</a></dd>
             </dl>
         </li>
@@ -20,7 +24,7 @@
         <li class="layui-nav-item">
             <a href="javascript:;">当前身份:游客</a>
             <dl class="layui-nav-child"> <!-- 二级菜单 -->
-                <dd><a href="{:url('index/index/login')}">登陆</a></dd>
+                <dd><a href="{:url('index/Login/login')}">登陆</a></dd>
             </dl>
         </li>
         {/if}
