--- a/application/index/view/public/left.html
+++ b/application/index/view/public/left.html
@@ -1,7 +1,10 @@
 <div class="left-nav">
     <div id="side-nav">
         <ul id="nav">
+            <!--//超级管理权限-->
             {if $Think.session.user.user_id}
+            <!--//管理员权限-->
+            {if $Think.session.user.employee_lv == 1}
             <li>
                 <a href="javascript:;">
                     <i class="iconfont">&#xe726;</i>
@@ -29,20 +32,21 @@
                             <cite>客户列表</cite>
                         </a>
                     </li >
-                    <li>
-                        <a _href="{:url('index/personnel/authorityClass')}">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>角色管理</cite>
-                        </a>
-                    </li >
-                    <li>
-                        <a _href="{:url('index/personnel/authorityClass')}">
-                        <i class="iconfont">&#xe6a7;</i>
-                            <cite>权限分类</cite>
-                        </a>
-                    </li >
+                    <!--<li>-->
+                        <!--<a _href="{:url('index/personnel/authorityClass')}">-->
+                            <!--<i class="iconfont">&#xe6a7;</i>-->
+                            <!--<cite>角色管理</cite>-->
+                        <!--</a>-->
+                    <!--</li >-->
+                    <!--<li>-->
+                        <!--<a _href="{:url('index/personnel/authorityClass')}">-->
+                        <!--<i class="iconfont">&#xe6a7;</i>-->
+                            <!--<cite>权限分类</cite>-->
+                        <!--</a>-->
+                    <!--</li >-->
                 </ul>
             </li>
+            {/if}
             <li>
                 <a href="javascript:;">
                     <i class="iconfont">&#xe6e5;</i>
