完善管理员模块、添加控制器空操作

--- a/application/index/view/public/left.html
+++ b/application/index/view/public/left.html
@@ -228,7 +228,7 @@
             </li>
             {/if}
             <li>
-                <a _href="{:url('index/agreement/agreement')}">
+                <a _href="">
                     <i class="icon iconfont">&#xe740;</i>
                     <cite>技术资料</cite>
                     <i class="iconfont nav_right">&#xe697;</i>
