修复部分自动生成编码重复问题、完成定额权限

--- a/application/index/view/internal/internal-add-a.html
+++ b/application/index/view/internal/internal-add-a.html
@@ -7,6 +7,7 @@
               <div class="layui-input-inline">
                   <input type="text" id="drawing_Internal_id" name="drawing_Internal_id" disabled lay-verify="required"  value="{$code}" autocomplete="off" class="layui-input">
                     <input type="hidden" value="{$assemblyCode_}" name="assembly_code">
+                  <input type="hidden" value="{$assemblyId}" name="assemblyId">
                   <p id="pLog" style="color:red"></p>
               </div>
           </div>
