--- a/application/index/view/process_type/process_type_add.html
+++ b/application/index/view/process_type/process_type_add.html
@@ -10,7 +10,13 @@
         <p id="pLog" style="color:red"></p>
       </div>
     </div>
-
+    <div class="layui-form-item">
+      <label for="process_price" class="layui-form-label">成本价</label>
+      <span style="color: red">*</span>
+      <div class="layui-input-inline">
+        <input type="text" id="cost_price" name="cost_price"  lay-verify="required"  autocomplete="off" class="layui-input"  placeholder="￥">
+      </div>
+    </div>
     <div class="layui-form-item">
       <label for="process_price" class="layui-form-label">报价</label>
       <span style="color: red">*</span>
