--- a/application/index/view/process_type/process_type_info.html
+++ b/application/index/view/process_type/process_type_info.html
@@ -14,6 +14,7 @@
           <thead>
           <tr>
             <th>工序类型说明</th>
+            <th>成本价</th>
             <th>报价</th>
             <th>排序</th>
             <th>操作</th>
@@ -23,9 +24,9 @@
           {volist name="$ProcessTypeInfo" id = "info"}
           <tr>
             <td>{$info.process_name}</td>
+            <td>{$info.cost_price}</td>
             <td>{$info.process_price}</td>
             <td>
-
               <div class="layui-input-inline listorder" style="width: 50px;">
                 <input type="text" value="{$info.sort}" style="height: 30px;" size="5" attr-id="{$info.id}" class="layui-input" name="listorder">
               </div>
