--- a/application/index/view/blueprint/add-process.html
+++ b/application/index/view/blueprint/add-process.html
@@ -64,19 +64,19 @@
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">工序报价</label>
-            <div class="layui-input-inline">
-                <input type="text" id="process_quoted_price" name="process_quoted_price"  placeholder="￥"  autocomplete="off" class="layui-input">
-            </div>
-        </div>
-        <div class="layui-form-item">
             <label class="layui-form-label">报价定额h(小时)</label>
             <div class="layui-input-inline">
                 <input type="text" id="quota_quotation" name="quota_quotation" autocomplete="off" class="layui-input" >
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">外协报价</label>
+            <label class="layui-form-label">工序报价</label>
+            <div class="layui-input-inline">
+                <input type="text" id="process_quoted_price" name="process_quoted_price"  placeholder="￥"  autocomplete="off" class="layui-input">
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">外协费用</label>
             <div class="layui-input-inline">
                 <input type="text" id="process_real_price" placeholder="￥"  name="process_real_price" autocomplete="off" class="layui-input">
             </div>
