--- a/application/index/view/blueprint/process-edit.html
+++ b/application/index/view/blueprint/process-edit.html
@@ -44,14 +44,14 @@
     </div>
     {if  $Think.session.user.is_quota == 1}
     <div class="layui-form-item">
-      <label for="process_quota" class="layui-form-label">工序定额</label>
+      <label for="process_quota" class="layui-form-label">工序定额h(小时)</label>
       <div class="layui-input-inline">
         <input type="text" id="process_quota" name="process_quota"   value="{$processRow.process_quota}"  autocomplete="off" class="layui-input"  >
       </div>
     </div>
     {else/}
     <div class="layui-form-item">
-      <label for="process_quota" class="layui-form-label">工序定额</label>
+      <label for="process_quota" class="layui-form-label">工序定额h(小时)</label>
       <div class="layui-input-inline">
         <input type="text" id="process_quota"  disabled value="{$processRow.process_quota}"  autocomplete="off" class="layui-input"  >
       </div>
@@ -71,19 +71,20 @@
       </div>
     </div>
     <div class="layui-form-item">
-      <label class="layui-form-label">工序报价</label>
-      <div class="layui-input-inline">
-        <input type="text" id="process_quoted_price" value="{$processRow.process_quoted_price}"   name="process_quoted_price"  autocomplete="off" class="layui-input">
-      </div>
-    </div>
-    <div class="layui-form-item">
-      <label class="layui-form-label">定额报价</label>
+      <label class="layui-form-label">定额报价h(小时)</label>
       <div class="layui-input-inline">
         <input type="text" id="quota_quotation"  value="{$processRow.quota_quotation}"  name="quota_quotation" autocomplete="off" class="layui-input" >
       </div>
     </div>
     <div class="layui-form-item">
-      <label class="layui-form-label">外协报价</label>
+      <label class="layui-form-label">工序报价</label>
+      <div class="layui-input-inline">
+        <input type="text" id="process_quoted_price" value="{$processRow.process_quoted_price}"   name="process_quoted_price"  autocomplete="off" class="layui-input">
+      </div>
+    </div>
+
+    <div class="layui-form-item">
+      <label class="layui-form-label">外协费用</label>
       <div class="layui-input-inline">
         <input type="text" id="process_real_price"  value="{$processRow.process_real_price}"  name="process_real_price" autocomplete="off" class="layui-input">
       </div>
