--- a/application/index/view/blueprint/process-edit.html
+++ b/application/index/view/blueprint/process-edit.html
@@ -71,7 +71,7 @@
       </div>
     </div>
     <div class="layui-form-item">
-      <label class="layui-form-label">定额报价h(小时)</label>
+      <label class="layui-form-label">报价定额h(小时)</label>
       <div class="layui-input-inline">
         <input type="text" id="quota_quotation"  value="{$processRow.quota_quotation}"  name="quota_quotation" autocomplete="off" class="layui-input" >
       </div>
