--- a/application/index/view/blueprint/process.html
+++ b/application/index/view/blueprint/process.html
@@ -67,7 +67,7 @@
               <th>工艺说明</th>
               <th>工序定额h(小时)</th>
               <th>是否检验</th>
-              <th>定额报价h(小时)</th>
+              <th>报价定额h(小时)</th>
               <th>工序报价</th>
               <th>外协费用</th>
               <th>备注</th>
